--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -1,32 +1,45 @@
 <h1 mat-dialog-title>Dialog with elements</h1>
 <div mat-dialog-content>
-    <mat-form-field appearance="outline">
-        <mat-label>Name</mat-label>
-        <input matInput placeholder="Name">
-    </mat-form-field>
-    <mat-form-field appearance="outline">
-        <mat-label>Email</mat-label>
-        <input matInput placeholder="Email">
-    </mat-form-field>
-    <mat-form-field appearance="outline">
-        <mat-label>Address</mat-label>
-        <input matInput placeholder="Address">
-    </mat-form-field>
-    <mat-radio-group aria-label="Select an option">
-        <mat-label>Gender</mat-label>
-        &nbsp;&nbsp;&nbsp;
-        <mat-radio-button value="1">Male</mat-radio-button>&nbsp;&nbsp;
-        <mat-radio-button value="2">Female</mat-radio-button>
-      </mat-radio-group>
-      
-    <mat-form-field class="example-full-width" appearance="fill">
-        <mat-label>Date Of Birth</mat-label>
-        <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="picker">
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
-    </mat-form-field>
-</div>
-<div mat-dialog-actions>
-  <button mat-button mat-dialog-close>Close</button>
-  <button mat-button mat-dialog-close>Submit</button>
+    <form [formGroup]="editForm" (ngSubmit)="editFormSubmit()">
+        <mat-form-field appearance="outline">
+            <mat-label>Name</mat-label>
+            <input matInput placeholder="Name" formControlName="name" class="form-control"
+                [ngClass]="{ 'is-invalid': submitted && f.name.errors }">
+            <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
+                <div *ngIf="f.name.errors.required">Name is required</div>
+            </div>
+        </mat-form-field>
+        <mat-form-field appearance="outline">
+            <mat-label>Email</mat-label>
+            <input matInput placeholder="email" formControlName="email" class="form-control"
+                [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
+            <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+                <div *ngIf="f.email.errors.required">Name is required</div>
+            </div>
+        </mat-form-field>
+        <mat-radio-group aria-label="Select an option" formControlName="gender">
+            <mat-label>Gender</mat-label>
+            &nbsp;&nbsp;&nbsp;
+            <mat-radio-button value="1">Male</mat-radio-button>&nbsp;&nbsp;
+            <mat-radio-button value="2">Female</mat-radio-button>
+        </mat-radio-group>
+        <mat-form-field appearance="outline">
+            <mat-label>Address</mat-label>
+            <input matInput placeholder="Address" formControlName="address" class="form-control"
+                [ngClass]="{ 'is-invalid': submitted && f.name.errors }">
+            <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
+                <div *ngIf="f.name.errors.required">Name is required</div>
+            </div>
+        </mat-form-field>
+        <mat-form-field class="example-full-width" appearance="fill">
+            <mat-label>Date Of Birth</mat-label>
+            <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="picker" formControlName="dob">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+        <div mat-dialog-actions>
+            <button mat-button mat-dialog-close>Close</button>
+            <button type="submit" mat-button mat-dialog-close >Submit</button>
+        </div>
+    </form>
 </div>
